test/bad/generics/call05.px

func f<A>(A->A->A g) def
    return

f(abs)
